HIVE-29518: Upgrade jackson to 2.18.6 due to GHSA-72hv-8253-57qq (#6385)