@@ -41,6 +41,7 @@ public class JavaVersionUtils {
       return " --add-opens=java.base/java.net=ALL-UNNAMED" +
           " --add-opens=java.base/java.util=ALL-UNNAMED" +
           " --add-opens=java.base/java.util.concurrent=ALL-UNNAMED" +
+          " --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED" +
           " --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED" +
           " --add-opens=java.base/java.lang=ALL-UNNAMED" +
           " --add-opens=java.base/java.io=ALL-UNNAMED" +
